# BlitzFFT

./: Cargo.toml  README.md  build.rs
benchmarks/: 60min_whole_file_fft.md
scripts/: generate_whole_fft_scaling_svg.py
shaders/: blitz_fft.cu  fft.metal
src/: audio.rs  benchmark.rs  blitz_fft.rs  main.rs  output.rs  quad.rs  whole_fft.rs
src/backends/: cpu.rs  cuda.rs  metal.rs  mod.rs
src/native/: pocketfft_bridge.cc
